updates to noundry.com - removed cloud; updated spinup product positioning

--- a/changelog.html
+++ b/changelog.html
@@ -95,7 +95,7 @@
                             <ul class="list-disc list-inside space-y-1 text-gray-700 dark:text-gray-300">
                                 <li>Unified all GitHub repository links to point to <strong>https://github.com/noundry</strong></li>
                                 <li>Standardized navigation across all pages (getting-started.html, docs.html, blazor-ui.html, jobs.html, libraries.html)</li>
-                                <li>Updated navigation menu order: Home, Libraries, UI Components (dropdown), Quick Start, AI, Cloud, Docs, Pricing</li>
+                                <li>Updated navigation menu order: Home, Libraries, UI Components (dropdown), Quick Start, AI, Docs, Pricing</li>
                                 <li>Updated libraries.html with Jobs automation section and Blazor UI in Web Development section</li>
                                 <li>Updated getting-started.html with Blazor UI Library and Jobs & Automation cards</li>
                                 <li>Updated docs.html with Blazor and Jobs documentation sections</li>
