--- a/getting-started.html
+++ b/getting-started.html
@@ -106,8 +106,8 @@
                             <h4 class="font-semibold text-gray-900 dark:text-white mb-2">💡 Use Noundry Templates</h4>
                             <p class="text-sm text-gray-600 dark:text-gray-300 mb-3">Skip manual package installation! Use our pre-configured web app template:</p>
                             <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300">
-                                <div class="text-blue-400">noundry templates install NDC.Templates.WebApp</div>
-                                <div class="text-blue-400">nd dn new ndc-webapp -- -n MyApp</div>
+                                <div class="text-blue-400">noundry templates install Noundry.Templates.WebApp</div>
+                                <div class="text-blue-400">nd dn new noundry-webapp -- -n MyApp</div>
                             </div>
                             <p class="text-xs text-gray-500 dark:text-gray-400 mt-2">Includes Noundry.UI, Authnz, Tuxedo, and DotEnvX pre-configured!</p>
                         </div>
@@ -356,8 +356,8 @@
                                 <h4 class="font-semibold text-gray-900 dark:text-white mb-2">💡 Use Noundry API Template</h4>
                                 <p class="text-sm text-gray-600 dark:text-gray-300 mb-3">Get a fully-configured REST API with Noundry components:</p>
                                 <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300">
-                                    <div class="text-blue-400">noundry templates install NDC.Templates.Api</div>
-                                    <div class="text-blue-400">nd dn new ndc-api -- -n MyApi</div>
+                                    <div class="text-blue-400">noundry templates install Noundry.Templates.Api</div>
+                                    <div class="text-blue-400">nd dn new noundry-api -- -n MyApi</div>
                                 </div>
                                 <p class="text-xs text-gray-500 dark:text-gray-400 mt-2">Includes Tuxedo, Bowtie, DotEnvX, and Guardian pre-configured!</p>
                             </div>
