--- a/spinup.html
+++ b/spinup.html
@@ -357,6 +357,57 @@
         </div>
     </section>
 
+    <!-- Stack Deployments -->
+    <section class="py-20 bg-white dark:bg-gray-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="max-w-4xl mx-auto">
+                <div class="text-center mb-12">
+                    <div class="inline-flex items-center px-4 py-2 bg-cyan-100 dark:bg-cyan-900/30 rounded-full mb-4">
+                        <span class="text-sm font-semibold text-cyan-600 dark:text-cyan-400">NEW FEATURE</span>
+                    </div>
+                    <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Stack Deployments</h2>
+                    <p class="text-xl text-gray-600 dark:text-gray-300">Deploy complete application stacks with a single command</p>
+                </div>
+
+                <div class="grid md:grid-cols-4 gap-4 mb-8">
+                    <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                        <div class="text-2xl font-bold text-emerald-600 dark:text-emerald-400">Small</div>
+                        <div class="text-sm text-gray-600 dark:text-gray-400">2 VMs</div>
+                        <div class="text-xs text-gray-500 dark:text-gray-500 mt-1">1 web + 1 db</div>
+                    </div>
+                    <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                        <div class="text-2xl font-bold text-emerald-600 dark:text-emerald-400">Medium</div>
+                        <div class="text-sm text-gray-600 dark:text-gray-400">3 VMs + Network</div>
+                        <div class="text-xs text-gray-500 dark:text-gray-500 mt-1">2 web + 1 db</div>
+                    </div>
+                    <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                        <div class="text-2xl font-bold text-emerald-600 dark:text-emerald-400">Large</div>
+                        <div class="text-sm text-gray-600 dark:text-gray-400">4 VMs + LB</div>
+                        <div class="text-xs text-gray-500 dark:text-gray-500 mt-1">3 web + 1 data</div>
+                    </div>
+                    <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                        <div class="text-2xl font-bold text-emerald-600 dark:text-emerald-400">XL</div>
+                        <div class="text-sm text-gray-600 dark:text-gray-400">7 VMs + LB</div>
+                        <div class="text-xs text-gray-500 dark:text-gray-500 mt-1">4 web + 2 db + cache</div>
+                    </div>
+                </div>
+
+                <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-6 font-mono text-sm text-gray-300">
+                    <div class="text-gray-500"># Deploy a complete large stack with one command</div>
+                    <div class="text-emerald-400">$ spinup stack create --template large --cloud aws --region us-east-1 --name myapp -y</div>
+                    <div class="mt-4 text-gray-500"># View deployed stacks</div>
+                    <div class="text-emerald-400">$ spinup stack list</div>
+                    <div class="mt-4 text-gray-500"># Destroy entire stack at once</div>
+                    <div class="text-emerald-400">$ spinup stack destroy --name myapp -y</div>
+                </div>
+
+                <p class="mt-6 text-gray-600 dark:text-gray-300 text-center">
+                    All VMs in stacks are automatically security hardened with your IP whitelisted for SSH.
+                </p>
+            </div>
+        </div>
+    </section>
+
     <!-- Complete Workflow Example -->
     <section class="py-20 bg-white dark:bg-gray-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
