--- a/index.html
+++ b/index.html
@@ -282,12 +282,6 @@
                         <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ +5.25 pts</div>
                     </div>
                     <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
-                        <div class="text-3xl font-bold mb-2">9.25/10</div>
-                        <div class="text-sm font-semibold mb-1">Cloud (NDC)</div>
-                        <div class="text-xs opacity-80">Multi-Cloud Deploy CLI</div>
-                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ +4.0 pts</div>
-                    </div>
-                    <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
                         <div class="text-3xl font-bold mb-2">9/10</div>
                         <div class="text-sm font-semibold mb-1">AuthnzNet</div>
                         <div class="text-xs opacity-80">OAuth 2.0 Dev Server</div>
@@ -692,10 +686,6 @@
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Deployment</h3>
                     </div>
                     <div class="space-y-4">
-                    <div class="border-l-4 border-accent-500 pl-4">
-					                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="cloud.html" class="hover:text-accent-600 dark:hover:text-accent-400 transition-colors">Noundry Deploy CLI (NDC)</a></h4>
-					                            <p class="text-gray-600 dark:text-gray-300 text-sm">Multi-cloud deployment templates using C# Aspire for local development and Terraform for cloud infrastructure across AWS, Azure, and Google Cloud.</p>
-                        </div>
                         <div class="border-l-4 border-cyan-500 pl-4">
                             <h4 class="font-semibold text-gray-900 dark:text-white"><a href="engine.html" class="hover:text-cyan-600 dark:hover:text-cyan-400 transition-colors">Noundry Engine CLI (ndng)</a></h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Fast C# deployment automation for Linux servers. Deploy C# 9.0+ applications with a single command - server initialization, SSL certificates, database setup, and more.</p>
@@ -708,9 +698,6 @@
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet tool install --global Noundry.Engine.Cli
-                        </code>
-                        <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
-						                            dotnet tool install --global Noundry.Deploy.Cli
                         </code>
                     </div>
                 </div>
@@ -887,7 +874,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Microservices Blueprint</h3>
-                                <p class="text-gray-600 dark:text-gray-300">Distributed architecture template with service discovery, API gateway, event sourcing, and containerization ready for multi-cloud deployment with NDC.</p>
+                                <p class="text-gray-600 dark:text-gray-300">Distributed architecture template with service discovery, API gateway, event sourcing, and containerization ready for deployment.</p>
                             </div>
                         </div>
                         <div class="flex items-start space-x-4">
@@ -1516,13 +1503,13 @@
                                 <span class="text-accent-500">nd templates list</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">nd templates install</span> <span class="text-gray-600 dark:text-gray-300">NDC.Templates.WebApp</span>
+                                <span class="text-accent-500">nd templates install</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Templates.WebApp</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">nd dn new ndc-webapp</span> <span class="text-gray-600 dark:text-gray-300">-n MyApp</span>
+                                <span class="text-accent-500">nd dn new noundry-webapp</span> <span class="text-gray-600 dark:text-gray-300">-n MyApp</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">nd dn new ndc-blazor</span> <span class="text-gray-600 dark:text-gray-300">-n MySPA</span>
+                                <span class="text-accent-500">nd dn new noundry-blazor</span> <span class="text-gray-600 dark:text-gray-300">-n MySPA</span>
                             </div>
                         </div>
 
@@ -1557,23 +1544,6 @@
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
                                 <span class="text-accent-500">njobs delete</span> <span class="text-gray-600 dark:text-gray-300">OldJob</span>
-                            </div>
-                        </div>
-
-                        <!-- Cloud Deployment -->
-                        <div class="space-y-3">
-                            <h4 class="text-sm font-semibold text-cyan-600 dark:text-cyan-400 mb-2">Cloud Deployment</h4>
-                            <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">ndc create</span> <span class="text-gray-600 dark:text-gray-300">aws --name MyApi</span>
-                            </div>
-                            <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">ndc create</span> <span class="text-gray-600 dark:text-gray-300">azure --name MyApp</span>
-                            </div>
-                            <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">ndc deploy</span> <span class="text-gray-600 dark:text-gray-300">--provider aws</span>
-                            </div>
-                            <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">ndc status</span>
                             </div>
                         </div>
 
@@ -1736,156 +1706,6 @@
                                 Learn More About NoundryMCP
                             </a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Cloud Section -->
-    <section id="cloud" class="py-20 bg-gradient-to-br from-cyan-50 to-blue-50 dark:from-gray-900 dark:to-gray-800">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-16">
-                <div class="inline-flex items-center justify-center w-20 h-20 bg-cyan-100 dark:bg-cyan-900 rounded-full mb-6">
-                    <svg class="w-10 h-10 text-cyan-600 dark:text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10"></path>
-                    </svg>
-                </div>
-                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">NDC - Deploy Anywhere</h2>
-                <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                    Multi-cloud C# application deployment using C# Aspire for consistent local development and Terraform for production infrastructure across AWS, Azure, Google Cloud, and containers.
-                </p>
-            </div>
-
-            <div class="grid lg:grid-cols-2 gap-12 items-center mb-16">
-                <div class="space-y-8">
-                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
-                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
-                            <svg class="w-6 h-6 text-cyan-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                            </svg>
-                            Multi-Cloud Templates
-                        </h3>
-                        <p class="text-gray-600 dark:text-gray-300">Create identical project structures for AWS, Azure, Google Cloud, or container platforms with consistent developer experience.</p>
-                    </div>
-
-                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
-                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
-                            <svg class="w-6 h-6 text-cyan-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
-                            </svg>
-                            Infrastructure as Code
-                        </h3>
-                        <p class="text-gray-600 dark:text-gray-300">Use Terraform for infrastructure as code and C# Aspire for local service orchestration. Version control your deployments and ensure consistency across environments.</p>
-                    </div>
-
-                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
-                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
-                            <svg class="w-6 h-6 text-cyan-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                            </svg>
-                            Zero-Downtime Deployments
-                        </h3>
-                        <p class="text-gray-600 dark:text-gray-300">Automated blue-green deployments, health checks, and rollback capabilities ensure your applications stay online during updates.</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-900 dark:bg-gray-800 rounded-xl p-6 shadow-2xl">
-                    <div class="flex items-center mb-4">
-                        <div class="flex space-x-2">
-                            <div class="w-3 h-3 bg-red-500 rounded-full"></div>
-                            <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
-                            <div class="w-3 h-3 bg-green-500 rounded-full"></div>
-                        </div>
-                        <div class="ml-4 text-gray-400 text-sm font-mono">NDC Project Creation</div>
-                    </div>
-                    <div class="font-mono text-sm space-y-2">
-                        <div class="text-gray-500"># Create cloud-ready project</div>
-                        <div class="text-cyan-500">$ ndc create azure --name ProductApi</div>
-                        <div class="text-gray-400">📦 Created C# Aspire project structure</div>
-                        <div class="text-gray-400">🗂️ Generated Terraform configurations</div>
-                        <div class="text-gray-400">✓ AppHost/, ApiService/, Infrastructure/ ready</div>
-
-                        <div class="text-gray-500 mt-3"># Local development with Aspire</div>
-                        <div class="text-cyan-500">$ dotnet run --project src/ProductApi.AppHost</div>
-                        <div class="text-gray-400">🎯 Starting Aspire orchestration...</div>
-                        <div class="text-gray-400">✓ PostgreSQL container: localhost:5432</div>
-                        <div class="text-gray-400">✓ Redis container: localhost:6379</div>
-                        <div class="text-gray-400">✓ MinIO (S3): localhost:9000</div>
-                        <div class="text-blue-400">🌐 Dashboard: http://localhost:15000</div>
-
-                        <div class="text-gray-500 mt-3"># Deploy to production (Azure)</div>
-                        <div class="text-cyan-500">$ ndc deploy --provider azure --environment prod</div>
-                        <div class="text-gray-400">🚀 Provisioning Azure Container Apps...</div>
-                        <div class="text-gray-400">🗄️ Creating Azure SQL Database...</div>
-                        <div class="text-gray-400">📊 Configuring Application Insights...</div>
-                        <div class="text-gray-400">🔐 Setting up Key Vault for secrets...</div>
-                        <div class="text-green-400">✅ Deployment successful!</div>
-                        <div class="text-blue-400">🌐 API: https://productapi.azurecontainerapps.io</div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Cloud Providers -->
-            <div class="grid md:grid-cols-3 gap-8 mb-16">
-                <div class="text-center p-8 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-                    <div class="w-16 h-16 bg-blue-100 dark:bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <svg class="w-8 h-8 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm-.001 18c-3.309 0-6-2.691-6-6s2.691-6 6-6 6 2.691 6 6-2.691 6-6 6z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Microsoft Azure</h3>
-                    <p class="text-gray-600 dark:text-gray-300 text-sm">App Service, Container Apps, Key Vault, Application Insights, Azure SQL</p>
-                </div>
-
-                <div class="text-center p-8 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-                    <div class="w-16 h-16 bg-orange-100 dark:bg-orange-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <svg class="w-8 h-8 text-orange-600 dark:text-orange-400" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M13.527 2.04L20.4 4.11a.76.76 0 01.6.74v14.3a.76.76 0 01-.6.74l-6.873 2.07a.76.76 0 01-.454 0L6.2 19.89a.76.76 0 01-.6-.74V4.85a.76.76 0 01.6-.74l6.873-2.07a.76.76 0 01.454 0z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Amazon AWS</h3>
-                    <p class="text-gray-600 dark:text-gray-300 text-sm">ECS, Lambda, RDS, CloudWatch, Elastic Beanstalk, App Runner</p>
-                </div>
-
-                <div class="text-center p-8 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
-                    <div class="w-16 h-16 bg-red-100 dark:bg-red-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <svg class="w-8 h-8 text-red-600 dark:text-red-400" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm-.001 18c-3.309 0-6-2.691-6-6s2.691-6 6-6 6 2.691 6 6-2.691 6-6 6z"/>
-                        </svg>
-                    </div>
-                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Google Cloud</h3>
-                    <p class="text-gray-600 dark:text-gray-300 text-sm">Cloud Run, App Engine, Cloud SQL, Cloud Monitoring, Container Registry</p>
-                </div>
-            </div>
-
-            <!-- Quick Start Example -->
-            <div class="text-center">
-                <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-8">Get Started in Minutes</h3>
-                <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-lg max-w-4xl mx-auto">
-                    <div class="grid md:grid-cols-2 gap-8 text-left">
-                        <div class="space-y-4">
-                            <h4 class="text-lg font-semibold text-gray-900 dark:text-white">1. Install & Initialize</h4>
-                            <div class="font-mono text-sm bg-gray-100 dark:bg-gray-700 p-3 rounded">
-                                <div class="text-cyan-500">$ ndc create aws --name MyApi</div>
-                                <div class="text-cyan-500">$ ndc init --provider azure</div>
-                            </div>
-                        </div>
-                        <div class="space-y-4">
-                            <h4 class="text-lg font-semibold text-gray-900 dark:text-white">2. Configure & Deploy</h4>
-                            <div class="font-mono text-sm bg-gray-100 dark:bg-gray-700 p-3 rounded">
-                                <div class="text-cyan-500">$ ndc configure --environment prod</div>
-                                <div class="text-cyan-500">$ ndc deploy</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-8">
-                        <a href="cloud.html" class="bg-cyan-600 hover:bg-cyan-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors inline-flex items-center">
-                            Explore NDC
-                            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                            </svg>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -2241,12 +2061,6 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                             </svg>
                             Performance Optimization
-                        </li>
-                        <li class="flex items-center">
-                            <svg class="w-4 h-4 text-purple-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                            </svg>
-                            NDC Templates
                         </li>
                         <li class="flex items-center">
                             <svg class="w-4 h-4 text-purple-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
